# flatgeobuf

./: .editorconfig  .eslintignore  .eslintrc.cjs  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .prettierignore  .prettierrc  .swcrc  CNAME  LICENSE  README.md  biome.json  eslint.config.js  eslint.config.mjs  gen_cpp.sh  gen_java.sh  gen_net.sh  gen_ts.sh  getcppdeps.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rolldown.config.js  rollup.config.js  run_tests.sh  tsconfig.json  tsconfig.test.json  tslint.json  typedoc.json  vite.config.ts
.circleci/: config.yml
.github/: FUNDING.yml
.github/workflows/: test.yml
config/: jsdoc.json  rollup.config.js  tsconfig.cjs.json  tsconfig.json  tsconfig.mjs.json  tsconfig.test.json  tsconfig.typedoc.json  tslint.json  typedoc.json
doc/: community_std_work_item.adoc  format-changelog.md  layout.odg
examples/: site.css
examples/leaflet/: filtered.html  index.html  index.js  index_filtered.html  index_filtered.js  large.html  simple.html
examples/maplibre/: filtered.html  index.html  large.html  simple.html
examples/node/: deserialize.js  index.js  package.json  serialize.js  streamtest.js
examples/openlayers/: filtered.html  index.html  index.js  large.html
examples/openlayers-hnv/: index.html  index.js
examples/viewer/: index.html
examples/www_root_dev/examples/: site.css
leaflet/: index.js
script/: gen_c.sh  gen_cpp.sh  gen_examples.sh  gen_go.sh  gen_java.sh  gen_net.sh  gen_rust.sh  gen_ts.sh  getcdeps.sh  getcppdeps.sh  run_tests.sh
src/c/: feature_builder.h  feature_reader.h  header_builder.h  header_reader.h
src/cpp/: .gitignore  Makefile  column_generated.h  feature_generated.h  fetch.sh  flatgeobuf_generated.h  fuzz-4642513358553088.cpp  geojson.h  geometry_generated.h  header_generated.h  main.cpp  packedhilbertrtree.cpp  packedhilbertrtree.h  packedrtree.cpp  packedrtree.h
src/cpp/examples/: geojson2fgb.cpp
src/cpp/include/: README
src/cpp/test/: geometry.h  header.h  packedhilbertrtree.h  packedrtree.h  point.h  roundtrips.h  run_tests.cpp  verifier.h
src/fbs/: column.fbs  feature.fbs  flatgeobuf.fbs  gen.sh  geometry.fbs  header.fbs
src/go/: behavior.go  flatgeobuf.go  flatgeobuf_test.go  geojson_test.go  go.mod  go.sum  madvise_darwin.go  madvise_linux.go  poly_landmarks.fgb
src/go/FlatGeobuf/: Column.go  ColumnType.go  Crs.go  Feature.go  Geometry.go  GeometryType.go  Header.go
src/go/flattypes/: Column.go  ColumnType.go  Crs.go  Feature.go  Geometry.go  GeometryType.go  Header.go
src/go/index/: hilbert.go  item.go  level_bound.go  node_item.go  packed_r_tree.go  packed_r_tree_test.go  search_result_item.go
src/go/writer/: column.go  crs.go  feature.go  feature_generator.go  geometry.go  geometry_extended.go  header.go  header_updater.go  index.go  support.go  writer.go
src/java/: .gitignore  pom.xml
src/net/: .gitignore  FlatGeobuf.sln  fetch.sh
src/net/FlatGeobuf/: .gitignore  Api.cs  Class1.cs  Column.cs  ColumnType.cs  Constants.cs  Crs.cs  Feature.cs  FlatGeobuf.csproj  Flatbush.cs  Geometry.cs  GeometryType.cs  Header.cs  Helpers.cs  Index.cs  Layer.cs  Srs.cs  Value.cs
src/net/FlatGeobuf.Tests/: ApiTest.cs  AttributeRoundtripTests.cs  FlatGeobuf.Tests.csproj  GeometryRoundtripTests.cs  UnitTest1.cs
src/net/FlatGeobufConverter/: FlatGeobufConverter.cs  FlatGeobufConverter.csproj
src/rdf/: schema.ttl
src/rust/: CHANGELOG.md  Cargo.toml  README.md
src/rust/benches/: geojson.rs  http_read.rs  read.rs
src/rust/fgbutil/: Cargo.toml
src/rust/fgbutil/src/: main.rs
src/rust/fuzz/: Cargo.toml
src/rust/fuzz/fuzz_targets/: feature.rs  read.rs
src/rust/src/: driver.rs  error.rs  feature_generated.rs  feature_writer.rs  file_appender.rs  file_reader.rs  file_sequential_reader.rs  file_writer.rs  geo_trait_impl.rs  geojson.rs  geometry_reader.rs  geometry_writer.rs  header_generated.rs  http_client.rs  http_reader.rs  lib.rs  packed_r_tree.rs  properties_reader.rs  reader.rs  svg.rs
src/rust/src/http_reader/: mock_http_range_client.rs  mod.rs
src/rust/tests/: append.rs  geojson.rs  http_read.rs  point.rs  read.rs  svg.rs  write.rs
src/ts/: ColumnMeta.ts  ColumnType.ts  CrsMeta.ts  HeaderMeta.ts  HttpReader.ts  LayerMeta.ts  Logger.ts  README.md  api.spec.ts  api.ts  array-reader.spec.ts  array-reader.ts  column-meta.ts  column-type.ts  column.ts  config.ts  constants.ts  crs-meta.ts  crs.ts  deserializer.ts  deserializerOptions.ts  dumptree.ts  feature.ts  feature_generated.ts  fetch.sh  flat-geobuf.ts  flatgeobuf.ts  flatgeobuf_generated.ts  gen.sh  generic.ts  geojson.spec.d.ts  geojson.spec.ts  geojson.ts  geometry-type.ts  geometry.ts  header-meta.ts  header.ts  header_generated.ts  http-reader.spec.ts  http-reader.ts  (+6 more)
src/ts/flat-geobuf/: column-type.ts  column.ts  crs.ts  feature.ts  geometry-type.ts  geometry.ts  header.ts  validity.ts  (+1 more)
test/data/: binary_wkb.fgb  clusterfuzz-testcase-minimized-fgb_fuzzer-4642513358553088  countries.dbf  countries.fgb  countries.shp  countries.shx  countries_nocrs.fgb  countries_nogeo.fgb  mp_overlapping.fgb  no_properties.fgb  triangle-header.fgb  unknown_feature_count.fgb
vite/: index.html  maplibre.html  metadata.html  ol-tile.html  ol.html
vite/src/: metadata.ts  ol-tile.ts  ol.ts  style.css
(+106 files in other folders)
