[package]
name = "flatgeobuf"
version = "3.26.1"
authors = ["Pirmin Kalberer <pka@sourcepole.ch>"]
edition = "2021"
description = "FlatGeobuf for Rust"
homepage = "https://flatgeobuf.org/"
repository = "https://github.com/flatgeobuf/flatgeobuf/tree/master/src/rust"
readme = "README.md"
documentation = "https://docs.rs/flatgeobuf/"
license = "BSD-2-Clause"
keywords = ["geo", "r-tree", "spatial"]

[features]
default = ["http"]
http = ["http-range-client", "bytes"]

[dependencies]
flatbuffers = "23.5.26"
byteorder = "1.4.3"
geozero = { version = "0.11.0", default-features = false }
http-range-client = { version = "0.6.0", optional = true }
bytes = { version = "1.4.0", optional = true }
log = "0.4.19"
fallible-streaming-iterator = "0.1.9"
tempfile = "3.7.1"

[dev-dependencies]
geozero = { version = "0.11.0", default-features = true }
seek_bufread = "1.2.2"
rand = "0.8.5"
hex = "0.4.3"
criterion = "0.5.1"
tokio = { version = "1.30.0", default-features = false, features = ["macros"] }
# One test needs SSL support; just use the default system bindings for that.
reqwest = { version = "0.11.18", default-features = true }
geo-types = "0.7.11"

[[bench]]
name = "read"
harness = false
[[bench]]
name = "geojson"
harness = false

#[patch.crates-io]
# Patch geozero dependencies (dev only)
#geozero = { path = "../../../../rust/geozero/geozero" }

[package.metadata.docs.rs]
all-features = true
